--- a/Presentation/spaCommerce/Pages/ShoppingCart/Cart.razor
+++ b/Presentation/spaCommerce/Pages/ShoppingCart/Cart.razor
@@ -76,7 +76,7 @@
     {
         if (CommonParams != null)
         {
-            CommonParams.ProductAddedToCart += OnProductAddedToCart;
+            CommonParams.ProductAddedToCart -= OnProductAddedToCart;
         }
 
         base.Dispose();
